@@ -10,6 +10,9 @@
     * FIX: Made logwatch parsing mechanism a little more robust
       (Had problems with emtpy sections from windows agent)
 
+    WATO:
+    * Reimplemented folder listing in host/folders module
+
 1.2.0b2:
     Core:
     * FIX: Cluster host checks were UNKNOWN all the time
